# AutoPilot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  wait_for_services.py  worker.py
backend/app/api/routes/: auth.py  documents.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  document.py  extraction_result.py  job_log.py  review_queue_item.py  user.py  workflow.py  workflow_run.py
backend/app/repositories/: user_repo.py
backend/app/schemas/: auth.py  document.py
backend/app/services/: auth_service.py  document_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0bd06dd1f533_initial_schema.py  7f9c2d4e1a6b_pre_auth_cleanup.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_documents_api.py
backend/tests/unit/: test_document_service.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
